new dashboard function

--- a/web/templates/cmdb_server_list.html
+++ b/web/templates/cmdb_server_list.html
@@ -58,14 +58,14 @@
             <div class="clearfix function-area">
                 <div class="btn-group btn-group-sm custom-btn-group">
 
-                    <a id="check_all" class="btn btn-default no-radius"><i class="fa fa-check-square"></i> Check All</a>
-                    <a id="check_cancel" class="btn btn-default no-radius"><i class="fa fa-minus-square-o"></i> Cancel</a>
-                    <a id="check_reverse" class="btn btn-default no-radius"><i class="fa fa-check-square-o"></i> Invert</a>
-                    <a href="/cmdb/asset-create.html" target="_self" class="btn btn-default no-radius"><i class="fa fa-plus-square-o"></i><span> Add</span></a>
-                    <a id="edit_mode_target" class="btn btn-default no-radius"><i class="fa fa-pencil-square-o"></i><span> Edit</span></a>
-                    <a id="do_save" class="btn btn-default no-radius"><i class="fa fa-floppy-o"></i> Save</a>
+                    <a id="check_all" class="btn btn-default no-radius"><i class="fa fa-check-square"></i> 全选</a>
+                    <a id="check_cancel" class="btn btn-default no-radius"><i class="fa fa-minus-square-o"></i> 取消</a>
+                    <a id="check_reverse" class="btn btn-default no-radius"><i class="fa fa-check-square-o"></i> 反选</a>
+                    <a href="/cmdb/asset-create.html" target="_self" class="btn btn-default no-radius"><i class="fa fa-plus-square-o"></i><span> 新建</span></a>
+                    <a id="edit_mode_target" class="btn btn-default no-radius"><i class="fa fa-pencil-square-o"></i><span> 编辑</span></a>
+                    <a id="do_save" class="btn btn-default no-radius"><i class="fa fa-floppy-o"></i> 保存</a>
 
-                    <a id="do_refresh" class="btn btn-default no-radius"><i class="fa fa-refresh"></i> Refresh</a>
+                    <a id="do_refresh" class="btn btn-default no-radius"><i class="fa fa-refresh"></i> 刷新</a>
                     <a id="handle_status" class="btn no-radius" tabindex="0" role="button" data-toggle="manual"
                        data-trigger="focus" data-container="body" data-html="true" data-placement="bottom" title="错误详细"
                        data-content=""></a>
