--- a/web/templates/layout/_layout.html
+++ b/web/templates/layout/_layout.html
@@ -49,28 +49,28 @@
 						<li>
 							<a href="/dashboard.html">
 								<i class="icon-dashboard"></i>
-								<span class="menu-text"> Dashboard </span>
+								<span class="menu-text"> 控制面板 </span>
 							</a>
 						</li>
 
 						<li class="open">
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-desktop"></i>
-								<span class="menu-text"> Applications </span>
+								<span class="menu-text"> 应用管理 </span>
 							</a>
 
 							<ul class="submenu" style="display: block;">
 								<li id="menu_project">
 									<a href="/project.html">
 										<i class="icon-double-angle-right"></i>
-										<i class="icon-coffee"></i> Project
+										<i class="icon-coffee"></i> 项目配置
 									</a>
 								</li>
 
 								<li id="menu_server">
 									<a href="/server.html">
 										<i class="icon-double-angle-right"></i>
-										<i class="icon-bar-chart"></i> Server
+										<i class="icon-bar-chart"></i> 应用列表
 									</a>
 								</li>
 
@@ -80,14 +80,14 @@
 						<li class="open">
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-list"></i>
-								<span class="menu-text"> Mission Control </span>
+								<span class="menu-text"> 任务中心 </span>
 							</a>
 
 							<ul class="submenu" style="display: block;">
 								<li id="menu_mission_list">
 									<a href="/mission.html">
 										<i class="icon-double-angle-right"></i>
-										<i class="icon-book"></i> Mission List
+										<i class="icon-book"></i> 任务管理
 									</a>
 								</li>
 							</ul>
@@ -96,20 +96,20 @@
                         <li class="open">
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-cogs"></i>
-								<span class="menu-text"> CMDB </span>
+								<span class="menu-text"> CMDB配置管理 </span>
 							</a>
 
 							<ul class="submenu" style="display: block;">
 								<li id="menu_cmdb_docker_list">
 									<a href="/cmdb/docker-list.html">
 										<i class="icon-double-angle-right"></i>
-										<i class="icon-cloud"></i> Docker List
+										<i class="icon-cloud"></i> Docker列表
 									</a>
 								</li>
                                 <li id="menu_cmdb_server_list">
 									<a href="/cmdb/server-list.html">
 										<i class="icon-double-angle-right"></i>
-										<i class="icon-laptop"></i> Asset Infomation
+										<i class="icon-laptop"></i> 服务器列表
 									</a>
 								</li>
 {#                                <li id="menu_cmdb_approve_list">#}
@@ -121,13 +121,13 @@
                                 <li id="menu_cmdb_business_list">
 									<a href="/cmdb/business-list.html">
 										<i class="icon-double-angle-right"></i>
-										<i class="icon-group"></i> Business Unit
+										<i class="icon-group"></i> 业务线管理
 									</a>
 								</li>
                                 <li id="menu_cmdb_idc_list">
 									<a href="/cmdb/idc-list.html">
 										<i class="icon-double-angle-right"></i>
-										<i class="icon-globe"></i> IDC
+										<i class="icon-globe"></i> IDC机房管理
 									</a>
 								</li>
 							</ul>
@@ -136,21 +136,21 @@
                         <li class="open">
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-desktop"></i>
-								<span class="menu-text"> User Center</span>
+								<span class="menu-text"> 用户中心</span>
 							</a>
 
 							<ul class="submenu" style="display: block;">
 								<li id="menu_user_list">
 									<a href="/user_center/user-list.html">
 										<i class="icon-double-angle-right"></i>
-										<i class="icon-coffee"></i> Users
+										<i class="icon-coffee"></i> 用户管理
 									</a>
 								</li>
 
 								<li id="menu_group_list">
 									<a href="/user_center/group-list.html">
 										<i class="icon-double-angle-right"></i>
-										<i class="icon-bar-chart"></i> Groups
+										<i class="icon-bar-chart"></i> 分组管理
 									</a>
 								</li>
 
