update usercenter functions

--- a/web/templates/layout/_layout.html
+++ b/web/templates/layout/_layout.html
@@ -130,6 +130,12 @@
 										<i class="icon-globe"></i> IDC机房管理
 									</a>
 								</li>
+                                <li id="menu_cmdb_approve_list">
+									<a href="/cmdb/approval-list.html">
+										<i class="icon-double-angle-right"></i>
+										<i class="icon-list-alt"></i> 资产审批
+									</a>
+								</li>
 							</ul>
 						</li>
 
@@ -151,6 +157,20 @@
 									<a href="/user_center/group-list.html">
 										<i class="icon-double-angle-right"></i>
 										<i class="icon-bar-chart"></i> 分组管理
+									</a>
+								</li>
+
+                                <li id="menu_permission_list">
+									<a href="/user_center/permission-list.html">
+										<i class="icon-double-angle-right"></i>
+										<i class="icon-key"></i> 权限配置
+									</a>
+								</li>
+
+                                <li id="menu_roles_list">
+									<a href="/user_center/roles-list.html">
+										<i class="icon-double-angle-right"></i>
+										<i class="icon-star-half-empty"></i> 角色管理
 									</a>
 								</li>
 
