--- a/web/templates/include/header_menu.html
+++ b/web/templates/include/header_menu.html
@@ -17,7 +17,7 @@
 
             <div class="more-info">
                 <!--<a href="#" class="more-item">个人信息</a>-->
-                <a href="/logout.html" class="more-item">Logout</a>
+                <a href="/system/logout.html" class="more-item">Logout</a>
             </div>
         </div>
 
