--- a/web/templates/cmdb_server_list.html
+++ b/web/templates/cmdb_server_list.html
@@ -14,8 +14,8 @@
 
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/cmdb/server-list.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Asset Infomation</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/cmdb/server-list.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 服务器列表</a>
         </div>
     </ol>
 
@@ -26,7 +26,7 @@
 
                 <div class="col-md-offset-10 do-submit">
                     <a id="search_condition_submit" class="btn btn-primary no-radius">
-                        <i class="fa fa-search"></i> Search
+                        <i class="fa fa-search"></i> 搜索
                     </a>
                 </div>
 
