--- a/web/templates/layout/_layout.html
+++ b/web/templates/layout/_layout.html
@@ -77,21 +77,21 @@
 							</ul>
 						</li>
 
-						<li class="open">
-							<a href="#" class="dropdown-toggle">
-								<i class="icon-list"></i>
-								<span class="menu-text"> 任务中心 </span>
-							</a>
-
-							<ul class="submenu" style="display: block;">
-								<li id="menu_mission_list">
-									<a href="/mission.html">
-										<i class="icon-double-angle-right"></i>
-										<i class="icon-book"></i> 任务管理
-									</a>
-								</li>
-							</ul>
-						</li>
+{#						<li class="open">#}
+{#							<a href="#" class="dropdown-toggle">#}
+{#								<i class="icon-list"></i>#}
+{#								<span class="menu-text"> 任务中心 </span>#}
+{#							</a>#}
+{##}
+{#							<ul class="submenu" style="display: block;">#}
+{#								<li id="menu_mission_list">#}
+{#									<a href="/mission.html">#}
+{#										<i class="icon-double-angle-right"></i>#}
+{#										<i class="icon-book"></i> 任务管理#}
+{#									</a>#}
+{#								</li>#}
+{#							</ul>#}
+{#						</li>#}
 
                         <li class="open">
 							<a href="#" class="dropdown-toggle">
