--- a/web/templates/include/server_config_header.html
+++ b/web/templates/include/server_config_header.html
@@ -2,13 +2,13 @@
     <div class="container-fluid" style="padding-left: 0">
         <div>
             <ul class="nav navbar-nav">
-                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="basic_info"><a class="no-radius" href="/server-config-{{ response.data.id }}.html"><span class="glyphicon glyphicon-th-large"></span> Basic Info</a></li>
-                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="groups"><a class="no-radius" href="/server/config/group/{{ response.data.id }}.html">Groups <span class="badge"></span></a></li>
-                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="instances"><a class="no-radius" href="/server/config/instance/{{ response.data.id }}.html">Instances <span class="badge"></span></a></li>
-                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="docker"><a class="no-radius" href="/server/config/docker/{{ response.data.id }}.html">Docker <span class="badge"></span></a></li>
-                <li style="border-right: 1px solid #e7e7e7" id="nginx"><a class="no-radius" href="/server/webconf/nginx/config-{{ response.data.id }}.html">Nginx <span class="badge"></span></a></li>
-                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="logs"><a class="no-radius" href="/server/config/logs/{{ response.data.id }}.html">Logs <span class="badge"></span></a></li>
-                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="urlmaps"><a class="no-radius" href="/server/config/urlmaps/{{ response.data.id }}.html">URL Maps <span class="badge"></span></a></li>
+                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="basic_info"><a class="no-radius" href="/server-config-{{ response.data.id }}.html"><span class="glyphicon glyphicon-th-large"></span> 应用信息</a></li>
+                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="groups"><a class="no-radius" href="/server/config/group/{{ response.data.id }}.html">分组管理 <span class="badge"></span></a></li>
+                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="instances"><a class="no-radius" href="/server/config/instance/{{ response.data.id }}.html">实例管理 <span class="badge"></span></a></li>
+                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="docker"><a class="no-radius" href="/server/config/docker/{{ response.data.id }}.html">Docker实例 <span class="badge"></span></a></li>
+                <li style="border-right: 1px solid #e7e7e7" id="nginx"><a class="no-radius" href="/server/webconf/nginx/config-{{ response.data.id }}.html">Nginx配置 <span class="badge"></span></a></li>
+                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="logs"><a class="no-radius" href="/server/config/logs/{{ response.data.id }}.html">日志地址 <span class="badge"></span></a></li>
+                <li role="presentation" style="border-right: 1px solid #e7e7e7" id="urlmaps"><a class="no-radius" href="/server/config/urlmaps/{{ response.data.id }}.html">URL映射 <span class="badge"></span></a></li>
             </ul>
         </div>
     </div>
