--- a/web/templates/include/server_config_urlmaps_detail.html
+++ b/web/templates/include/server_config_urlmaps_detail.html
@@ -5,13 +5,13 @@
             Http URL
         </th>
         <th nowrap="nowrap">
-            Cloud Server
+            一层转发
         </th>
         <th nowrap="nowrap">
-            Forward Server(Ha/Nginx)
+            二层转发
         </th>
         <th nowrap="nowrap">
-            App Instance
+            应用实例
         </th>
     </tr>
         <tr>
