--- a/web/templates/project_projectviews.html
+++ b/web/templates/project_projectviews.html
@@ -26,7 +26,7 @@
     <div class="row" style="padding: 10px 8px;">
         <div class="col-md-12">
             <!-- 应用日志地址 -->
-            <div class="panel panel-primary">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">{{ response.data.name }} Logs Url</h3>
                 </div>
@@ -77,7 +77,7 @@
 
         <div class="col-md-12">
             <!-- URL 映射关系 -->
-            <div class="panel panel-primary">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">{{ response.data.name }} Url Maps</h3>
                 </div>
