--- a/web/templates/server_config_docker.html
+++ b/web/templates/server_config_docker.html
@@ -12,10 +12,10 @@
 
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/server.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Application</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/server.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 应用列表</a>
             <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'server-config' response.data.id %}"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> {{ response.data.name }}</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'server-config-instance' response.data.id %}"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> Docker</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'server-config-instance' response.data.id %}"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> Docker实例</a>
         </div>
     </ol>
 
@@ -29,7 +29,7 @@
             <div class="col-md-12">
 
                 <div id="docker_toolbar" class="btn-group">
-                    <a class="btn btn-success no-radius" data-toggle="modal" data-target="#add_docker_modal" onclick="bond_docker_fn()"><i class="fa fa-plus-circle"></i> Bond Docker</a>
+                    <a class="btn btn-success no-radius" data-toggle="modal" data-target="#add_docker_modal" onclick="bond_docker_fn()"><i class="fa fa-plus-circle"></i> 绑定Docker实例</a>
                 </div>
 
                 <table id="docker_table"></table>
@@ -46,16 +46,12 @@
         <div class="modal-content" style="margin-top: 150px">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Delete Application Docker Instance</h4>
+                <h4 class="modal-title" id="myModalLabel">删除Docker实例数据</h4>
             </div>
-            <div class="modal-body" id="delete_docker_html_area">
-
-                Confirm remove group  ? All the data will be delete.
-
-            </div>
+            <div class="modal-body" id="delete_docker_html_area"></div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="delete_server_docker_fn" onclick="update_server_docker_fn('delete')">Delete</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delete_server_docker_fn" onclick="update_server_docker_fn('delete')">删除</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
@@ -68,7 +64,7 @@
         <div class="modal-content" style="margin-top: 150px">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Bond Docker Instances</h4>
+                <h4 class="modal-title" id="myModalLabel">绑定Docker实例</h4>
             </div>
             <div class="modal-body">
 
@@ -77,7 +73,7 @@
                     <table class="table table-bordered table-striped">
                         <tbody>
                         <tr>
-                            <td style="line-height:34px;" align="right">Group Select : *</td>
+                            <td style="line-height:34px;" align="right">选择分组 : *</td>
                             <td>
                                 <select class="form-control" name="add_docker_group_id">
                                     {% for obj in response.data.groups.all %}
@@ -87,10 +83,10 @@
                             </td>
                         </tr>
                         <tr>
-                            <td style="line-height:34px;" align="right">Host IP Address : *</td>
+                            <td style="line-height:34px;" align="right">Docker宿主机 : *</td>
                             <td>
                                 <select class="form-control" name="add_instance_ip" onchange="load_instance_fn(this)">
-                                    <option value="None">Please select Ipaddress</option>
+                                    <option value="None">选择实例（数据来自CMDB）</option>
                                     {% for obj in response.asset_data.all %}
                                         <option value="{{ obj.id }}">{{ obj.server.ipaddress }}</option>
                                     {% endfor %}
@@ -100,7 +96,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td style="line-height:34px;" align="right">Docker Instance : *</td>
+                            <td style="line-height:34px;" align="right">Docker实例 : *</td>
                             <td>
                                 <!--<input type="text" class="form-control" name="add_instance_port" placeholder="">-->
                                 <select class="form-control" id="docker_instance" name="docker_select"></select>
@@ -112,8 +108,8 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="update_server_docker_fn" onclick="update_server_docker_fn('post')">Bond</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="update_server_docker_fn" onclick="update_server_docker_fn('post')">绑定</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
