--- a/web/templates/server_config_group.html
+++ b/web/templates/server_config_group.html
@@ -12,10 +12,10 @@
 
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/server.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Application</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/server.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 应用列表</a>
             <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'server-config' response.data.id %}"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> {{ response.data.name }}</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'server-config-group' response.data.id %}"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Groups</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'server-config-group' response.data.id %}"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> 分组管理</a>
         </div>
     </ol>
 
@@ -29,8 +29,8 @@
             <div class="col-md-12">
 
                 <div id="group_toolbar" class="btn-group">
-                    <a class="btn btn-default no-radius" data-toggle="modal" data-target="#add_group_modal" onclick="create_group_fn()"><i class="fa fa-plus-circle"></i> Create Group</a>
-                    <a class="btn btn-default no-radius" data-toggle="modal" data-target="#add_public_group_modal" onclick="bond_public_group_fn()"><i class="fa fa-plus-circle"></i> Public Group</a>
+                    <a class="btn btn-default no-radius" data-toggle="modal" data-target="#add_group_modal" onclick="create_group_fn()"><i class="fa fa-plus-circle"></i> 创建分组</a>
+                    <a class="btn btn-default no-radius" data-toggle="modal" data-target="#add_public_group_modal" onclick="bond_public_group_fn()"><i class="fa fa-plus-circle"></i> 绑定公共分组</a>
                 </div>
 
                 <table id="group_table"></table>
@@ -47,7 +47,7 @@
         <div class="modal-content" style="margin-top: 150px">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Create Application Group</h4>
+                <h4 class="modal-title" id="myModalLabel">创建分组</h4>
             </div>
             <div class="modal-body">
 
@@ -55,9 +55,9 @@
                     <table class="table table-bordered table-striped">
                         <tbody>
                             <tr>
-                                <td style="line-height:34px;" align="right">Group Name : *</td>
+                                <td style="line-height:34px;" align="right">分组名称 : *</td>
                                 <td>
-                                    <input type="text" class="form-control" name="add_group_name" placeholder="Please enter group name...">
+                                    <input type="text" class="form-control" name="add_group_name" placeholder="请输入分组名称...">
                                     <input type="hidden" class="form-control" name="add_group_app_id" value="{{ response.data.id }}">
                                 </td>
                             </tr>
@@ -74,15 +74,15 @@
                                 </td>
                             </tr>-->
                             <tr>
-                                <td style="line-height:34px;" align="right">Group Type : *</td>
+                                <td style="line-height:34px;" align="right">分组类型 : *</td>
                                 <td style="vertical-align: inherit">
 
                                     <label class="radio-inline" style="padding-left: 24px">
-                                        <input type="radio" name="add_group_type" value="0" id="add_group_type_0" checked=""> Private
+                                        <input type="radio" name="add_group_type" value="0" id="add_group_type_0" checked=""> 私有分组
                                     </label>
 
                                     <label class="radio-inline">
-                                        <input type="radio" name="add_group_type" value="1" id="add_group_type_1"> Public
+                                        <input type="radio" name="add_group_type" value="1" id="add_group_type_1"> 公共分组
                                     </label>
 
                                 </td>
@@ -93,8 +93,8 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="update_server_group_fn" onclick="update_server_group_fn('post')">Save</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="update_server_group_fn" onclick="update_server_group_fn('post')">保存</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
@@ -107,7 +107,7 @@
         <div class="modal-content" style="margin-top: 150px">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Bond Public Application Group</h4>
+                <h4 class="modal-title" id="myModalLabel">绑定公共分组</h4>
             </div>
             <div class="modal-body">
 
@@ -115,7 +115,7 @@
                     <table class="table table-bordered table-striped">
                         <tbody>
                             <tr>
-                                <td style="line-height:34px;" align="right">Group Name : *</td>
+                                <td style="line-height:34px;" align="right">分组名称 : *</td>
                                 <td>
                                     <select class="form-control" name="bond_public_group" id="bond_public_group"></select>
                                 </td>
@@ -127,8 +127,8 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick="do_bond_public_group()">Bond</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" onclick="do_bond_public_group()">绑定</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
@@ -141,16 +141,12 @@
         <div class="modal-content" style="margin-top: 150px">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Delete Application Group</h4>
+                <h4 class="modal-title" id="myModalLabel">删除分组</h4>
             </div>
-            <div class="modal-body" id="group_html_area">
-
-                Confirm remove group  ? All the data will be delete.
-
-            </div>
+            <div class="modal-body" id="group_html_area"></div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="delete_server_group_fn" onclick="update_server_group_fn('post')">Delete</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delete_server_group_fn" onclick="update_server_group_fn('post')">删除</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
@@ -182,8 +178,8 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="edit_yaml_conf_btn" onclick="edit_yaml_conf_fn()">Edit</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="edit_yaml_conf_btn" onclick="edit_yaml_conf_fn()">更新</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
