--- a/web/templates/server_config_logs.html
+++ b/web/templates/server_config_logs.html
@@ -12,10 +12,10 @@
 
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/server.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Application</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/server.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 应用列表</a>
             <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'server-config' response.data.id %}"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> {{ response.data.name }}</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'server-config-instance' response.data.id %}"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Logs</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'server-config-instance' response.data.id %}"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> 日志地址</a>
         </div>
     </ol>
 
@@ -29,7 +29,7 @@
             <div class="col-md-12">
 
                 <div id="logs_toolbar" class="btn-group">
-                    <a class="btn btn-success no-radius" data-toggle="modal" data-target="#add_logs_modal" onclick="bond_logs_fn()"><i class="fa fa-plus-circle"></i> Create LogUrl</a>
+                    <a class="btn btn-success no-radius" data-toggle="modal" data-target="#add_logs_modal" onclick="bond_logs_fn()"><i class="fa fa-plus-circle"></i> 创建日志地址</a>
                 </div>
 
                 <table id="logs_table"></table>
@@ -46,16 +46,12 @@
         <div class="modal-content" style="margin-top: 150px">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Delete Server Log Url</h4>
+                <h4 class="modal-title" id="myModalLabel">删除日志地址</h4>
             </div>
-            <div class="modal-body" id="delete_logs_html_area">
-
-                Confirm remove group  ? All the data will be delete.
-
-            </div>
+            <div class="modal-body" id="delete_logs_html_area"></div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="delete_server_logs_fn" onclick="update_server_logs_fn('delete')">Delete</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delete_server_logs_fn" onclick="update_server_logs_fn('delete')">删除</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
@@ -68,7 +64,7 @@
         <div class="modal-content" style="margin-top: 150px">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Create Server Log URL</h4>
+                <h4 class="modal-title" id="myModalLabel">创建日志URL地址</h4>
             </div>
             <div class="modal-body">
 
@@ -77,7 +73,7 @@
                     <table class="table table-bordered table-striped">
                         <tbody>
                         <tr>
-                            <td style="line-height:34px;" align="right">Group Select : *</td>
+                            <td style="line-height:34px;" align="right">选择分组 : *</td>
                             <td>
                                 <select class="form-control" name="add_logs_group_id">
                                     {% for obj in response.data.groups.all %}
@@ -87,15 +83,15 @@
                             </td>
                         </tr>
                         <tr>
-                            <td style="line-height:34px;" align="right">Server LogUrl : *</td>
+                            <td style="line-height:34px;" align="right">日志URL地址 : *</td>
                             <td>
-                                <input type="text" class="form-control" name="add_server_log_url" placeholder="Please enter log url...">
+                                <input type="text" class="form-control" name="add_server_log_url" placeholder="请输入日志地址...">
                             </td>
                         </tr>
                         <tr>
-                            <td style="line-height:34px;" align="right">Log Memo : *</td>
+                            <td style="line-height:34px;" align="right">备注信息 : *</td>
                             <td>
-                                <textarea type="text" class="form-control" name="add_server_log_memo" placeholder="Logs Memo..."></textarea>
+                                <textarea type="text" class="form-control" name="add_server_log_memo" placeholder="备注信息..."></textarea>
                             </td>
                         </tr>
                         </tbody>
@@ -104,8 +100,8 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="update_server_logs_fn" onclick="update_server_logs_fn('post')">Update</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="update_server_logs_fn" onclick="update_server_logs_fn('post')">更新</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
